src/objects/Deployment_Plan_Item__c.object
<CustomObject>
    <description>Represents a deployment plan name and dates for IATA projects</description>
    <fields>
        <fullName>Deployment_Plan__c</fullName>
        <label>Deployment Plan</label>
        <referenceTo>Deployment_Plan__c</referenceTo>
        <relationshipLabel>Deployment Plan Items</relationshipLabel>
        <relationshipName>Deployment_Plan_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Element__c</fullName>
        <label>Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AccountSettings</fullName>
                </value>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>ActionOverride</fullName>
                </value>
                <value>
                    <fullName>ActivitiesSettings</fullName>
                </value>
                <value>
                    <fullName>AddressSettings</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>ArticleType</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AuthProvider</fullName>
                </value>
                <value>
                    <fullName>AuraDefinitionBundle</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BaseSharingRule</fullName>
                </value>
                <value>
                    <fullName>BusinessHoursSettings</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>CaseSettings</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>ChatterAnswersSettings</fullName>
                </value>
                <value>
                    <fullName>CompanySettings</fullName>
                </value>
                <value>
                    <fullName>Community (Zone)</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>ConnectedApp</fullName>
                </value>
                <value>
                    <fullName>ContractSettings</fullName>
                </value>
                <value>
                    <fullName>CorsWhitelistOrigin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Plan Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deployment_Plan__c</columns>
        <columns>Element__c</columns>
        <columns>For_Deletion__c</columns>
        <columns>Section__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Deployment Plan Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>